# simple-rust-kvstore

./: .gitignore  Cargo.toml  criterion.toml  readme.md
.github/workflows/: rust.yml
benches/: bench.rs  concurrency_bench.rs  engine_bench.rs
src/: client.rs  err.rs  kv.rs  lib.rs  protocol.rs  server.rs
src/engine/: kv.rs  mod.rs  sled.rs
src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
tests/: kv_store.rs
