[package]
name = "kvs"
version = "0.1.0"
authors = ["Jason210314 <wmc314@outlook.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.8"
structopt = "0.3.21"
env_logger = "0.8.2"
log = "0.4.14"
sled = "0.34.6"
crossbeam = "0.8.0"
num_cpus = "1.13.0"
rayon = "1.5.0"
crossbeam-skiplist = { version = "0.0.0", git = "https://github.com/crossbeam-rs/crossbeam.git", branch = "master" }


[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = { version = "0.8.3", features = ["small_rng"]}
tempfile = "3.0.7"
walkdir = "2.2.7"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"


[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "concurrency_bench"
harness = false