[package]
name = "kvs"
version = "0.1.0"
authors = ["Jason210314 <wmc314@outlook.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-serde = { version = "0.8.0", features = ["json"] }
thiserror = "1.0.30"
anyhow = "1.0.56"
structopt = "0.3.21"
env_logger = "0.8.2"
log = "0.4.14"
sled = "0.34.6"
crossbeam = "0.8.1"
rayon = "1.5.0"
crossbeam-skiplist = { version = "0.0.0", git = "https://github.com/crossbeam-rs/crossbeam.git", branch = "master" }
async-trait = "0.1.53"
tokio = { version = "1.17", features = ["full"] }
futures = "0.3.21"
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
assert_cmd = "0.11"
criterion = { version = "0.3", features = ["async_tokio", "async"] }
predicates = "1.0.0"
rand = { version = "0.8.3", features = ["small_rng"] }
tempfile = "3.0.7"
walkdir = "2.2.7"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"
awaitgroup = "0.6.0"

[[bench]]
name = "concurrency_bench"
harness = false
